--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@heroicons/react": "^1.0.5",
+    "@hookform/resolvers": "^2.8.4",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3"
+    "status-code-enum": "^1.0.0",
+    "styled-components": "^5.3.3",
+    "sweetalert2": "^11.2.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
