--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.4.0",
     "status-code-enum": "^1.0.0",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.2.2",
