--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
