--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "^2.8.4",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -19,6 +20,7 @@
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^4.0.1",
     "react-hook-form": "^7.20.5",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
