--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "build:staging": "cross-env REACT_APP_BASE_URL=https://api-beta.hithaui.com/api CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
