--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_API_KEY=https://api.chatngay.xyz/api
 REACT_APP_SOCKET=wss://api.chatngay.xyz
 REACT_APP_SERVER=https://api.chatngay.xyz
+REACT_APP_PEER_HOST=localhost
