--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_API_KEY=https://api.chatngay.xyz/api
 REACT_APP_SOCKET=wss://api.chatngay.xyz
 REACT_APP_SERVER=https://api.chatngay.xyz
 REACT_APP_PEER_HOST=localhost
+REACT_APP_PEER_PORT=5000
